# hashy

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: event.rs  file.rs  hash.rs  main.rs
src/components/: Algorithm.svelte  Buttons.svelte  Card.svelte  Cards.svelte  Carousel.svelte  Event.svelte  File.svelte  Hash.svelte  HashFiles.svelte  HashPage.svelte  Hasher.svelte  Hashy.svelte  Input.svelte  Menu.svelte  Metadata.svelte  Modal.svelte  Navbar.svelte  SelectAlgorithms.svelte  SelectFiles.svelte  Theme.svelte  ThemeChanger.svelte
src/components/Layout/: AlgoToolbar.svelte  Footer.svelte  HasherToolbar.svelte  Menu.svelte  Navbar.svelte  Theme.svelte  Toolbar.svelte
src/components/Layout/models/: route.models.ts
src/components/algorithm/: AlgorithmCheckboxes.svelte
src/components/algorithm/store/: algorithm.store.ts
src/components/file/: FileMetadata.svelte
src/components/file/models/: file.model.ts
src/components/file/store/: file.store.ts
src/components/hash/: DisplayHashes.svelte
src/components/hash/models/: hash.models.ts
src/components/hash/store/: hash.store.ts
src/lib/: FileOpen.svelte
src/models/: algorithms.models.ts  file.model.ts  hash.models.ts  route.models.ts
src/pages/: ComputeHash.svelte  SelectAlgorithm.svelte
src/pages/HashPage/: HashPage.svelte
src/stores/: algorithm.store.ts  file.store.ts  file.ts  files.ts  hash.store.ts  hash.ts  hashes.ts  theme.store.ts  theme.ts
(+11 files in other folders)
