[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.2", features = ["clipboard-all", "dialog-open"] }
hex = "0.4.3"
digest = "0.10.3"
md-5 = "0.10.1"
sha-1 = "0.10.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
ripemd = "0.1.1"
blake2 = "0.10.4"
blake3 = "0.1.2"
shabal = "0.4.1"
sm3 = "0.4.1"
streebog = "0.10.1"
tiger = "0.2.1"
whirlpool = "0.10.1"
groestl = "0.10.1"
gost94 = "0.10.1"
fsb = "0.1.1"

state = "0.5.2"
chrono = "0.4"
# lazy_static = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
